force-app/main/default/objects/Customer_Reference_Requests__c/Customer_Reference_Requests__c.object-meta.xml
<CustomObject>
    <description>This is a custom object used to facilitate AMs and AEs collaborating on Customer Reference R</description>
    <label>Customer Reference Request</label>
    <nameField>
        <label>Customer Reference Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Reference Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>