force-app/main/default/objects/Customer_Reference_Requests__c/fields/Are_there_reference_requirements__c.field-meta.xml
<CustomField>
    <fullName>Are_there_reference_requirements__c</fullName>
    <label>Are there reference requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>