force-app/main/default/objects/Customer_Reference_Requests__c/fields/Background_Reference_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Background_Reference_Requirements__c</fullName>
    <label>Background &amp; Reference Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>