force-app/main/default/objects/Customer_Reference_Requests__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>This fiels is automatically completed when the requested references are inserted into the request.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>