force-app/main/default/objects/Customer_Reference_Requests__c/fields/Contacts_Added_Table__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Added_Table__c</fullName>
    <description>This is for the html creation of a table to be used in email template</description>
    <label>Contacts_Added_Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>