force-app/main/default/objects/Customer_Reference_Requests__c/fields/Deal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Deal_Outcome__c</fullName>
    <label>Deal Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Lost Due to Reference</fullName>
            </value>
            <value>
                <fullName>Closed Lost Due to Other</fullName>
            </value>
            <value>
                <fullName>Closed Won Due to Reference</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>