force-app/main/default/objects/Customer_Reference_Requests__c/fields/Deal_Outcome_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deal_Outcome_Comments__c</fullName>
    <description>A field to be entered manually to describe how the reference affected the outcome of the deal</description>
    <label>Deal Outcome Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>