force-app/main/default/objects/Customer_Reference_Requests__c/fields/Deal_Outcome_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deal_Outcome_Formula__c</fullName>
    <formula>IF(
Opportunity__r.IsClosed &amp;&amp; Opportunity__r.IsWon,&quot;Closed Won&quot;,
If(Opportunity__r.IsClosed &amp;&amp; !Opportunity__r.IsWon,&quot;Closed Lost&quot;,&quot;Deal Open&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Outcome</label>
    <type>Text</type>
</CustomField>