force-app/main/default/objects/Customer_Reference_Requests__c/fields/How_many_References_Needed__c.field-meta.xml
<CustomField>
    <fullName>How_many_References_Needed__c</fullName>
    <label>How many References Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>