force-app/main/default/objects/Customer_Reference_Requests__c/fields/Invited_Customer_to_Be_a_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invited_Customer_to_Be_a_Reference__c</fullName>
    <label>Invited Customer to Be a Reference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>