force-app/main/default/objects/Customer_Reference_Requests__c/fields/Is_this_an_RFP__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_RFP__c</fullName>
    <label>Is this an RFP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>