force-app/main/default/objects/Customer_Reference_Requests__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related opportunity that will be used for deal outcome logic</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This opportunity does not match the related account</errorMessage>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Please attach the opportunity relevant to this Reference Request</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Reference Requests</relationshipLabel>
    <relationshipName>Customer_Reference_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>