force-app/main/default/objects/Customer_Reference_Requests__c/fields/PartnerStack_Manager_to_Update_Customer__c.field-meta.xml
<CustomField>
    <fullName>PartnerStack_Manager_to_Update_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartnerStack Mgr: Customer Rewarded</label>
    <type>Checkbox</type>
</CustomField>