force-app/main/default/objects/Customer_Reference_Requests__c/fields/Reference_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Status__c</fullName>
    <label>Reference Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>