force-app/main/default/objects/Customer_Reference_Requests__c/fields/References_Provided__c.field-meta.xml
<CustomField>
    <fullName>References_Provided__c</fullName>
    <label>References Provided</label>
    <summaryForeignKey>Customer_Reference__c.Customer_Reference_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>