force-app/main/default/objects/Customer_Reference_Requests__c/fields/References_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>References_Still_Needed__c</fullName>
    <formula>How_many_References_Needed__c -  References_Provided__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>References Still Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>