force-app/main/default/objects/Customer_Reference_Requests__c/fields/Requester_Customer_Provided_Reference__c.field-meta.xml
<CustomField>
    <fullName>Requester_Customer_Provided_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requester: Customer provided reference</label>
    <type>Checkbox</type>
</CustomField>